# pod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  fly.toml  openapi.yaml  package.json  pnpm-lock.yaml  tailwind.config.js
.sqlx/: query-01eb7f99e499bb200e0f7fbe6ec446b49eafb5edb957ca053c6039a5b59b89af.json  query-0a781cf5ad6a77bfa4972da7107f0db7dd32218a12702c34a821381067d46439.json  query-0c5dd8a8f7e3025e7bebc27248aa9c691421865b880e323c3843cd3e7789e3ca.json  query-0f74af5b521c9dea875ca9cfb0f8949c89bc04b0aacf875778e5377cc207c7be.json  query-15ada9b58398b77c7ce961889d968ac31569b59a64f731ad9754511a6519b493.json  query-16f7b504de7c7ab7d1315af39ab82c8cf3ae2127f11c6c98334bbe5a234e0684.json  query-1d698accf365b52f6514de54ddc133b4d16e8712d6cd4fa4b9ce42b6b4a9aa50.json  query-266fd5fbd8d9349b2348fa845d9bf4aa6a80d8da3391c4994fa42f66bbd148b4.json  query-2ee44f27bd7904fd6842e307e61537f97f40c9b1c84aadac854868d9482a45f0.json  query-32cb39fcae7341963595bc4391184329b4a27a15d8aa7bd50c0a400636753a8c.json  query-428e26ff9bd85173236b09b6ba0e3c0fc5e4a6cc20b848c35605330dd2b360f1.json  query-45be22c39c9701e856c6f36adfee4a9d247f611fdeb55d8c4e7345352a5f2048.json  query-46f63cb8e30d52a162e4ae18a661cbfe219b1deb61aca913954fc9f5131fff2f.json  query-5e7236200dacaadb96fcc4b218dadae4cdec4254aebc80e156db22209bb2a793.json  query-607bf71d331116fe2168f4a641cbfeb410f5620ff95aaf77d7990e6aabf2697a.json  query-78109206c0ab0b559e04001663a4b257005b9ed38778d6bbc01d1adea77a49e1.json  query-7ba1eec543424f4fecbf9e11df4cd5e035efb68db3e3b09e3121bf4c157b0f16.json  query-7d61e9a3cd7cb30f72112bf757a7e7a936d9fa1c6d5ad3f8d20b19a41131e2a3.json  query-8146469c451f0f6f85c9e513a69f21b2b5f0cadcb4a327ae18b455ed41e0c01c.json  query-85372993a9bcb5eee09f21b66845d953c21ff9331f37ac5450d61708e12e62d9.json  query-a6326462a34d76d6cfd6416d41bf75d896213c9c06fcdde842954fe91ed98924.json  query-afc0a9e177893ae690a16b1689deaff7e7a23c9620fe30d87609260380801b2a.json  query-ce6a9a80a47eef3905f5fc68ee755e7813065a7ccd343da6119c1c1ad965cd31.json  query-d3e70527a3059dc70e290a72551f66c205ee0c1e49698ac93ff104fdda3207f5.json  query-ef5acb2e6c2f49ad9d506035d2736aa9e8c75c0f19c7b4920db2f17fe7ecdcdb.json  query-f2a7d733b15c4972d5a8583d3c7714eaa924040a5d20c4b5a42460c6ef097cf6.json  query-ffedfbe2453e350dfd5035e26ec5de26a0efaa215248b43b758af9d5d20dca23.json
assets/: main.css
crates/pod-model/: Cargo.toml
crates/pod-model/src/: lib.rs
crates/pod-server/: Cargo.toml
crates/pod-server/.sqlx/: query-15ada9b58398b77c7ce961889d968ac31569b59a64f731ad9754511a6519b493.json  query-1ef120ce04b85521a5f4b2c526818110ab5c4f268649eed673b5fc6c73dde3d7.json  query-2ee44f27bd7904fd6842e307e61537f97f40c9b1c84aadac854868d9482a45f0.json  query-32cb39fcae7341963595bc4391184329b4a27a15d8aa7bd50c0a400636753a8c.json  query-428e26ff9bd85173236b09b6ba0e3c0fc5e4a6cc20b848c35605330dd2b360f1.json  query-795c15148e8f488102a6ae1d358e937756e564c56280adf61bcbf1ea1f8a20e9.json  query-80823fafbf4a97aba1196e0d99d05ed24834553cb887138fd6081a72db9ad086.json  query-a5113d3fda6295d93ec481411137f4b66fa806b7ddaa002bbbed66e739471c3b.json  query-ac58b6f0a93343d9dfebd079381852b6f6392b4b937c32c7885f3eef12e1cc4d.json  query-b11a01f73f1c03ce58e005cfe5adb1c878e7274ae79a8aa4efb13c2b478c4b17.json  query-cc82e1ffa62c1e8f0d1d3be306bf5e847a0162b53b36b9af8fca15f594f5d80e.json  query-f475e0ac4d8c3f9e91344b9680f8c311a8d769885bae2b5773416d8499580c82.json  query-ff2731d76acafede8356c0c12751aea414485612fe78ef3b8b4e7750629ac27d.json
crates/pod-server/migrations/: 20240526102939_initial.sql  20260406000001_podcast_feed_last_modified.sql  20260406000002_drop_episode_audio_url_unique.sql  20260406000003_episode_content_encoded.sql
crates/pod-server/src/: app.rs  feed.rs  lib.rs  main.rs  model.rs
crates/pod-server/src/db/: mod.rs
crates/pod-server/src/http/: auth.rs  errors.rs
crates/pod-server/src/http/api/: auth.rs  episodes.rs  mod.rs  podcasts.rs  sync.rs
crates/pod-tui/: Cargo.toml
crates/pod-tui/src/: api_client.rs  app.rs  event.rs  lib.rs  local_db.rs  main.rs  mpris.rs  player.rs  sync.rs
crates/pod-tui/src/ui/: episode_detail.rs  episode_list.rs  inbox.rs  login.rs  mod.rs  podcast_list.rs  status_bar.rs
crates/pod-web/: Cargo.toml  Trunk.toml  index.html  style.css
crates/pod-web/src/: api.rs  main.rs  player.rs  state.rs  util.rs
crates/pod-web/src/views/: auth.rs  dashboard.rs  episode_modal.rs  inbox.rs  mod.rs  podcast.rs  shared.rs  shell.rs
frontend/: index.html
migrations/: 20241104125635_new_unique_constraints.sql  20241110133158_drop_session_user_id_unique_constraint.sql  20260131000000_username_password_auth.sql  20260403172406_episode_change_log.sql  20260406000000_podcast_feed_etag.sql
src/: app.rs  config.rs  feed.rs  lib.rs  model.rs
src/db/: mod.rs
src/http/: auth.rs  errors.rs  mod.rs
src/http/api/: auth.rs  episodes.rs  mod.rs  podcasts.rs  sync.rs
src/http/web/: add_feed.rs  dash.rs  mod.rs  podcast.rs  report_progress.rs
src/tui/: api_client.rs  app.rs  event.rs  local_db.rs  mod.rs  mpris.rs  sync.rs
src/tui/ui/: episode_detail.rs  episode_list.rs  inbox.rs  login.rs  mod.rs  podcast_list.rs  status_bar.rs  text.rs
templates/: dash.html  login.html  podcast.html  register.html  skel.html
