[package]
name = "pod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
argon2 = "0.5"
feed-rs = "1.5.2"
mime = "0.3.17"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "http2",
    "json",
] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }
thiserror = "1.0.66"
toml = "0.8"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.8.0"
xml = "0.8.20"
