[package]
name = "pod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart", "macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
argon2 = "0.5"
feed-rs = "1.5.2"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "http2",
    "json",
] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "macros",
    "chrono",
    "tls-rustls",
] }
thiserror = "1.0.66"
toml = "0.8"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = "1.8.0"
mime = "0.3.17"

# TUI-only dependencies (behind the "tui" feature)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
tokio-stream = { version = "0.1", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
dirs = { version = "6", optional = true }
html2text = { version = "0.14", optional = true }
mpris-server = { version = "0.9", optional = true }
unicode-width = { version = "0.2", optional = true }

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm", "dep:tokio-stream", "dep:rusqlite", "dep:dirs", "dep:html2text", "dep:mpris-server", "dep:unicode-width"]

[[bin]]
name = "pod-tui"
path = "src/bin/pod-tui.rs"
required-features = ["tui"]
