[package]
name = "pod-model"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
uuid = "1.8.0"
sqlx = { version = "0.8.2", features = ["macros", "chrono", "uuid"], optional = true }
