[package]
name = "pod-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pod"
path = "src/main.rs"

[dependencies]
pod-model = { path = "../pod-model" }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "http2", "json", "stream"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-stream = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
html2text = "0.14"
mpris-server = "0.9"
unicode-width = "0.2"
